--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,22 @@
 apply plugin: 'java'
 version = '0.0.2-topobyte' 
 
+apply plugin: 'eclipse'
+
 task listJars << {
     configurations.compile.each { File file -> println file.name }
 }
 
 repositories {
+    mavenCentral()
     flatDir {
         dirs 'lib'
     }
 }
 
 dependencies {
-    compile group: 'org.slf4j-api', name: 'slf4j-api', version: '1.6.1'
-    runtime group: 'org.slf4j-log4j', name: 'slf4j-log4j12', version: '1.6.1'
-    runtime group: 'org.apache.log4j', name: 'log4j'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    compile "org.slf4j:slf4j-api:1.6.1"
+    runtime "org.slf4j:slf4j-log4j12:1.6.1"
+    runtime "log4j:log4j:1.2.16"
+    testCompile "junit:junit:4.+"
 }
