--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'java'
-version = 'topobyte-0.0.2'
+group = pGroup
+version = pVersion
 
+apply plugin: 'java'
+apply plugin: 'maven'
 apply plugin: 'eclipse'
 
 task listJars << {
@@ -9,9 +11,6 @@ task listJars << {
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'lib'
-    }
 }
 
 dependencies {
@@ -19,4 +18,23 @@ dependencies {
     runtime "org.slf4j:slf4j-log4j12:1.6.1"
     runtime "log4j:log4j:1.2.16"
     testCompile "junit:junit:4.+"
+}
+
+if (project.hasProperty("topobyte")) {
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: maven_url_topobyte)
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
 }
