Add main executable for cli module

--- a/build.gradle
+++ b/build.gradle
@@ -88,21 +88,38 @@ configure(libraries) {
 project(':dbf4j') {
     eclipse.project.name = 'dbf4j-core'
     dependencies {
-        compile "org.slf4j:slf4j-api:1.6.1"
-        runtime "org.slf4j:slf4j-log4j12:1.6.1"
-        runtime "log4j:log4j:1.2.16"
-        testCompile "junit:junit:4.+"
+        compile 'org.slf4j:slf4j-api:1.6.1'
+        testCompile 'junit:junit:4.+'
     }
 }
 
 project(':dbf4j-examples') {
     dependencies {
         compile project(':dbf4j')
+        runtime 'org.slf4j:slf4j-log4j12:1.6.1'
+        runtime 'log4j:log4j:1.2.16'
     }
 }
 
 project(':dbf4j-cli') {
     dependencies {
         compile project(':dbf4j')
+        compile 'de.topobyte:commons-cli-helper:0.1.0'
+        runtime 'org.slf4j:slf4j-log4j12:1.6.1'
+        runtime 'log4j:log4j:1.2.16'
+    }
+
+    task copyJars(type: Copy) {
+        into "$buildDir/lib-run"
+        from jar
+    }
+
+    task copyDeps(type: Copy) {
+        into "$buildDir/lib-run"
+        from configurations.runtime
+    }
+
+    task createRuntime(dependsOn: [copyJars, copyDeps]) {
+        description 'Setup the execution environment for the main scripts'
     }
 }
