--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ project(':dbf4j-examples') {
         compile project(':dbf4j')
         runtime 'org.slf4j:slf4j-log4j12:1.6.1'
         runtime 'log4j:log4j:1.2.16'
+        testCompile 'junit:junit:4.+'
     }
 }
 
